add mqtt on env

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,11 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+MQTT_HOST=192.168.100.27
+MQTT_PORT=1883
+MQTT_AUTH_USERNAME=your_username
+MQTT_AUTH_PASSWORD=your_password
+MQTT_CLIENT_ID=spss_webite
+MQTT_ENABLE_LOGGING=true
